# bus_factor

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs
src/query_handler/: bus_factor.rs  contributor_query_handler.rs  mod.rs  repository.rs  repository_query_handler.rs
src/report_generator/: mod.rs
tests/: advance.rs  simple.rs  simple_test.rs
