[package]
name = "bus_factor"
version = "0.1.0"
edition = "2021"
default-run = "bus_factor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.80"
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0"
log = "0.4.17"
env_logger = "0.9.0"
itertools = "0.10.3"

[dev-dependencies]
assert_cmd = "2.0.4"
wiremock = "0.5.7"
predicates = "2.0.3"

[[bin]]
name = "bus_factor"
path = "src/bin/bus_factor.rs"